# ChangeLog for app-misc/ktoblzcheck
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/ktoblzcheck/ChangeLog,v 1.5 2004/06/07 23:40:24 dragonheart Exp $

  08 Jun 2004; Daniel Black <dragonheart@gentoo.org> ktoblzcheck-0.7.ebuild:
  Fixed install to solve bug #53211. Added test routine too. Thanks carlo@g.o

  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> ktoblzcheck-0.7.ebuild:
  no 0.7 yet - access violation - bug #53211

  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  ktoblzcheck-0.6.ebuild, +ktoblzcheck-0.7.ebuild:
  x86 stable, version bump

*ktoblzcheck-0.6 (13 Jan 2004)

  13 Jan 2004; Hanno Boeck <hanno@gentoo.org> ktoblzcheck-0.6.ebuild:
  Version bump.

*ktoblzcheck-0.3 (21 Jun 2003)

  21 Jun 2003; Jon Portnoy <avenj@gentoo.org> ktoblzcheck-0.3.ebuild :

  Initial import. Submitted in bug 22801 by Christian Hollander
  <gentoo@fire-live.de> and reviewed by Don Seiler.