@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/ktoblzcheck/Attic/ktoblzcheck-0.7.ebuild,v 1.3 2004/06/07 23:40:24 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/ktoblzcheck/Attic/ktoblzcheck-0.7.ebuild,v 1.4 2004/06/08 01:19:54 dragonheart Exp $
 
 DESCRIPTION="Library to check account numbers and bank codes of German banks"
 HOMEPAGE="http://ktoblzcheck.sourceforge.net/"
@@ -15,11 +15,6 @@ DEPEND="${RDEPEND}
 	sys-apps/grep
 	sys-devel/libtool
 	sys-devel/gcc"
-
-src_compile() {
-	econf || die "configure failed"
-	emake || die "make failed"
-}
 
 src_install() {
 	emake DESTDIR=${D} || die "install failed"
